Fix: update location references to Diekirch in localization files and add sitemap.xml

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -1,8 +1,8 @@
 {
     "seo": {
         "home": {
-            "title": "Kinésithérapie Ingo Pauls - Physiotherapie in Luxemburg",
-            "description": "Willkommen bei Kinésithérapie Ingo Pauls in Luxemburg. Wir bieten professionelle Physiotherapie für nachhaltige Schmerzlinderung und Beweglichkeit."
+            "title": "Kinésithérapie Ingo Pauls - Physiotherapie in Diekirch",
+            "description": "Willkommen bei Kinésithérapie Ingo Pauls in Diekirch. Wir bieten professionelle Physiotherapie für nachhaltige Schmerzlinderung und Beweglichkeit."
         }
     },
     "nav": {
@@ -13,8 +13,8 @@
     },
     "hero": {
         "title": "Kinésithérapie",
-        "titleSecondLine": "Luxemburg",
-        "titleThirdLine": "Ingo Pauls",
+        "titleSecondLine": "Ingo Pauls",
+        "titleThirdLine": "Diekirch",
         "subtitle": "Seit 2005 begleiten wir Sie mit moderner, spezialisierter Physiotherapie bei orthopädischen, neurologischen, post-operativen und sportbedingten Beschwerden – kompetent und auf dem neuesten Stand der Wissenschaft.",
         "cta": "Termin vereinbaren"
     },
@@ -35,7 +35,7 @@
                     "Fachweiterbildung mit Anlehnung an das Bobathkonzept 1997 in Betzdorf",
                     "Eröffnung der eigenen Praxis im Jahr 2005",
                     "Manualtherapeut nach S.O.M.T. an der „FIM Münster“ im Jahr 2000",
-                    "Ausbildung zum Fazientherapeut durch die „INOMT“ an der „MFZ Hannover“ 2016",
+                    "Ausbildung zum Faszientherapeuten durch die „INOMT“ an der „MFZ Hannover“ 2016",
                     "Weiterbildung Medizinische Trainingstherapie 2018 in Bad Neuenahr",
                     "Ausbildung zum CMD-Therapeuten im Jahr 2020 durch die „FOMT“ an der „MFZ Hannover“",
                     "Fortbildung Knorpelrehabilitation im Jahr 2023",
@@ -75,7 +75,7 @@
                     "Abschluss als Physiotherapeut („Bachelor of Science“), erhalten von der „staatlich anerkannten, privaten Hochschule Fresenius“ in Köln im Jahr 2024",
                     "In Ausbildung zum Manualtherapeuten nach S.O.M.T. an der „FIM Münster“",
                     "Fortbildung zum Faszientherapeut",
-                    "Fortbildung Sportphysiotherapie an der „EDEN-Reha“ in Donaustadt",
+                    "Fortbildung Sportphysiotherapie an der „EDEN-Reha“ in Donaustauf",
                     "Physiotherapeut der Fussballmannschaft FC47 Bastendorf"
                 ]
             }
