Fix: remove HTML formatting from team member role in localization file

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -27,7 +27,7 @@
         "members": {
             "ingo": {
                 "name": "Ingo Pauls",
-                "role": "Geschäftsführer & <strong>Physiotherapeut</strong>",
+                "role": "Geschäftsführer & Physiotherapeut",
                 "about": "Ausbildung, Fortbildungen und Schwerpunkte",
                 "bullets": [
                     "Abschluss als <strong>Physiotherapeut</strong>, erhalten von der „staatlich anerkannten Lehranstalt für Physiotherapie“ in Wittlich im Jahr 1996",
