Fix: add HTML formatting to fitness trainer and dry needling education entries in localization file

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -31,7 +31,7 @@
                 "about": "Ausbildung, Fortbildungen und Schwerpunkte",
                 "bullets": [
                     "Abschluss als <strong>Physiotherapeut</strong>, erhalten von der „staatlich anerkannten Lehranstalt für Physiotherapie“ in Wittlich im Jahr 1996",
-                    "Komplette Ausbildung zum Fitnesstrainer durch die „Inline Unternehmensberatung GmbH“ in Dorsten",
+                    "Komplette Ausbildung zum <strong>Fitnesstrainer</strong> durch die „Inline Unternehmensberatung GmbH“ in Dorsten",
                     "Fachweiterbildung mit Anlehnung an das <strong>Bobathkonzept</strong> 1997 in Betzdorf",
                     "Eröffnung der eigenen Praxis im Jahr 2005",
                     "<strong>Manualtherapeut nach S.O.M.T.</strong> an der „FIM Münster“ im Jahr 2000",
@@ -50,7 +50,7 @@
                     "Abschluss als <strong>Physiotherapeut</strong> („Master en kinésithérapie et réadaptation“) an der „Université catholique de Louvain“ im Jahr 2013",
                     "<strong>Manualtherapeut nach S.O.M.T.</strong> an der „Université de Liège“ im Jahr 2017",
                     "Zahlreiche Fortbildungen im Bereich der <strong>Orthopädie</strong> und <strong>Sportphysiotherapie</strong>",
-                    "Komplette Ausbildung im <strong>\"Dry Needling\"</strong> an der „David G Simmons Academy“",
+                    "Komplette Ausbildung im <strong>Dry Needling</strong> an der „David G Simmons Academy“",
                     "<strong>Physiotherapeut</strong> des Männer-Basketballteams BBC Etzella Ettelbruck",
                     "<strong>Physiotherapeut</strong> des Männer-Basketballnationalteams"
                 ]
