Fix: update continuing education descriptions for team members in localization files

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -62,7 +62,7 @@
                 "bullets": [
                     "Abschluss als <strong>Physiotherapeutin</strong>, erhalten von der „staatlichen Schule für Physiotherapie Grünstadt“ im Jahr 1988",
                     "Ausbildung in <strong>manueller Lymphdrainage</strong> und <strong>komplexer Entstauungstherapie</strong> durch die „Lymphologic GmbH Deutschland“",
-                    "Fortbildungen u.a. in der <strong>Bewegungslehre nach Klein-Vogelbach</strong> sowie der <strong>therapeutischen Körperarbeit nach Feldenkrais</strong>",
+                    "Zahlreiche Fortbildungen u.a. in der <strong>Bewegungslehre nach Klein-Vogelbach</strong> sowie der <strong>therapeutischen Körperarbeit nach Feldenkrais</strong>",
                     "Fortbildung <strong>Narbenentstörung</strong> mit Hilfe von <strong>Fußreflexzonentherapie</strong>",
                     "Langjährige Erfahrung in der Arbeit mit Menschen mit körperlichen und geistigen Einschränkungen"
                 ]
