--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -62,7 +62,7 @@
                 "bullets": [
                     "Degree as a physiotherapist from the “State School of Physiotherapy Grünstadt” (1988)",
                     "Training in “Manual Lymphatic Drainage / Complex Decongestive Therapy” through “Lymphologic GmbH Deutschland”",
-                    "Continuing education, including movement instruction according to Klein-Vogelbach and therapeutic bodywork according to Feldenkrais",
+                    "Numerous continuing-education courses, including movement instruction according to Klein-Vogelbach and therapeutic bodywork according to Feldenkrais",
                     "Continuing education in scar treatment using foot reflexology",
                     "Many years of experience working with people with physical and intellectual disabilities"
                 ]
