--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -62,7 +62,7 @@
                 "bullets": [
                     "Diplômé en kinésithérapie à la »staatlichen Schule für Physiotherapie Grünstadt« en 1988",
                     "Formation en « drainage lymphatique manuel/thérapie décongestive complexe » auprès de la société « Lymphologic GmbH Deutschland »",
-                    "Formation continue entre autres en kinésiologie selon Klein-Vogelbach et en travail corporel thérapeutique selon Feldenkrais",
+                    "Nombreuses formations continues, entre autres en kinésiologie selon Klein-Vogelbach et en travail corporel thérapeutique selon Feldenkrais",
                     "Formation continue en traitement des cicatrices à l'aide de la réflexologie plantaire",
                     "Plusieurs années d'expérience dans le travail avec des personnes atteints de handicaps physiques et mentaux"
                 ]
