--- a/src/locales/lb.json
+++ b/src/locales/lb.json
@@ -62,7 +62,7 @@
                 "bullets": [
                     "Ofschloss als Physiotherapeutin, kritt vun der „staatlichen Schule für Physiotherapie Grünstadt“ am Joer 1988",
                     "Ausbildung „manuelle Lymphdrainage/ komplexe Entstauungstherapie“ duerch d’„Lymphologic GmbH Deutschland“",
-                    "Fortbildungen ënner anerem an der Bewegungslehre no Klein-Vogelbach souwéi an der therapeutescher Kierperaarbecht no Feldenkrais",
+                    "Vill Fortbildungen, ënner anerem an der Bewegungslehre no Klein-Vogelbach souwéi an der therapeutescher Kierperaarbecht no Feldenkrais",
                     "Fortbildung „Narbenentstéierung“ mat Hëllef vun der Fussreflexzonentherapie",
                     "Jorelaang Erfarung an der Aarbecht mat Mënsche mat kierperlechen a geeschtegen Aschränkungen"
                 ]
